improve RDMO description and adjust links

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -6,7 +6,7 @@ title: "Data Management Plan"
 
 ## Introduction
 
-Data management plans (DMP) help to outline how research data will be handled during and after a project to ensure preservation of the data and its [metadata](/docs/topics/metadata). DMPs are particularly helpful when created prior to data collection to guarantee consistent [organisation](/docs/data/data_organisation), annotation, and formatting of the data. They can be used as part of quality and project management.
+Data management plans (DMP) help to outline how research data will be handled during and after a project to ensure preservation of the data and their [metadata](/docs/topics/metadata). DMPs are particularly helpful when created prior to data collection to guarantee consistent [organisation](/docs/data/data_organisation), annotation, and formatting of the data. They can be used as part of quality and project management.
 
 A DMP, like an [electronic laboratory notebook](/docs/topics/eln) or even a laboratory information management system in chemistry, represents a type of documentation. These different types of documentation must be considered at different levels. A DMP answers the W-questions for documentation. 
 
@@ -26,9 +26,9 @@ In addition to funder compliance, there should be an intrinsic motivation for a 
 - helps you to think in advance and to consider issues connected with confidentiality, ethics, security and copyright directly from the project start.
 - offers continuity of knowledge and its transmission when new project members join.
 
-## DMP from funders perspective
+## DMP from funders' perspective
 
-A number of research funders require DMPs at different stages of the project. It is depending on the funder. For example, the EU expects a DMP after 6 months of the project start, in the middle as well as at the end of the project. In its Horizon Europe programme, the EU has been offering a new [DMP template](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjml9rO--zzAhUBDewKHXdJBvcQFnoECAwQAQ&url=https%3A%2F%2Fec.europa.eu%2Finfo%2Ffunding-tenders%2Fopportunities%2Fdocs%2F2021-2027%2Fhorizon%2Ftemp-form%2Freport%2Fdata-management-plan-template_he_en.docx&usg=AOvVaw1ho40vgdz3hm2YvFUZ-m4t) to support DMP creation since May 2021. 
+A number of research funders require DMPs at different stages of the project. It is depending on the funder. For example, the EU expects a DMP after 6 months of the project start, in the middle as well as at the end of the project. In its Horizon Europe programme, the EU has been offering a new [DMP template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) to support DMP creation since May 2021. 
 
 The German funding agencies do not regulate it as strictly as it is by the EU. For example, in certain projects the BMBF requires a so-called exploitation plan or information on the use of the results as part of the application. This requirement is already included in the funding guidelines, for instance in the funding programme of ["Coastal Sea Research in the North Sea and Baltic Sea - Coasts in Transition"](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung). 
 
@@ -42,22 +42,24 @@ The creation of a DMP can be supported by various tools. Some of the most common
 
 [DMPTool](https://dmptool.org/) is run by the California Digital Library. Due to the different funding landscape in the US, the tool is only of limited use for German/European projects. One advantage is that DMPTool provides DMP examples on the website. It can be used without using the tool.
 
-[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) was developed in a DFG-funded project from 2015 – 2020 and has a wide recognition in Germany. It is now further maintained by an RDMO working group as an open source software. A general, very detailed template is available in RDMO. In addition, individual subject-specific templates can also be used, mainly for the humanities. Further individual subject-specific templates are being worked on in the disciplines. After a review process by the RDMO working group these templates will be provided and can be used in individual instances. This extension is an advantage of RDMO and makes it easier for researchers to complete DMP templates. Furthermore, RDMO offers general help texts for individual questions.
+[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) is run at 45 research institutions in Germany and abroad. It was developed in a DFG-funded project (2015–2020) and is now further maintained by the RDMO working group as an open source software. It makes it easier for researchers to complete DMP templates using precisely formulated questions, help texts, multiple-choice answers. Several templates ("catalogs") exist for specific funding programs, disciplines, or research consortia. They can be downloaded from the central repository. On the other hand, it is quite easy to create a new template for specific needs and submit it.
 
 To further support researchers in answering the questions, working groups have been formed, e.g. in Science Europe or the Research Data Alliance (RDA). The Science Europe Group is focusing on improving the general help texts, while the working group in the RDA focuses on [discipline-specific guidance](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe set up a new version of the [practical guide](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) in January 2021. 
 
-Further information about DMP tools can be found in the [DMP Tool Guide](https://zenodo.org/record/4632308#.YYElWJ6ZNPY).
+A comparison of commonly used DMP tools can be found in the [DMP-Toolguide](https://zenodo.org/record/4632308).
 
 ## Sources and further information
 
-- [DMP Template](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjml9rO--zzAhUBDewKHXdJBvcQFnoECAwQAQ&url=https%3A%2F%2Fec.europa.eu%2Finfo%2Ffunding-tenders%2Fopportunities%2Fdocs%2F2021-2027%2Fhorizon%2Ftemp-form%2Freport%2Fdata-management-plan-template_he_en.docx&usg=AOvVaw1ho40vgdz3hm2YvFUZ-m4t)<br/>
+- [Elements of a Data Management Plan](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html)
+- [DFG guidelines on research data](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html)
+- [Practical Guide to the International Alignment of Research Data Management - Extended Edition](https://doi.org/10.5281/zenodo.4915862)
+- [RDA workgroup on discipline specific guidance on DMPs](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg)
+- [Horizon Europe DMP Template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx)
+- [Indications from the Federal Ministery of Education](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung) _(German)_
+- [Data Management Plans at forschungsdaten.info](https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/) _(German)_
+- [Comparison of DMP tools at forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Management_Pl%C3%A4ne#Tools) _(German)_
+- [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)
+
+- [DMPOnline](https://dmponline.dcc.ac.uk/)
 - [DMPTool](https://dmptool.org/)
-- [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)<br/>
-- [Elements of a Data Management Plan](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html)<br/> 
-- https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html<br/> 
-- https://dmponline.dcc.ac.uk/<br/> 
-- https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg<br/>
-- Practical Guide to the International Alignment of Research Data Management - Extended Edition<br/>[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4915862.svg)](https://doi.org/10.5281/zenodo.4915862)<br/>
-- German: https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/<br/>
-- German: https://rdmo.aip.de/<br/>
-- German: https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung<br/>
+- [RDMO](https://rdmo.aip.de/)
