--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -40,6 +40,7 @@ In addition to  of ORCiDs as non-proprietary PIDs for authors there are also pro
 
 ## Sources and further information 
 
+- English: [DOI Basics - DataCite](https://support.datacite.org/docs/doi-basics)
 - German: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
 - German: [Digital Object Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
 - German: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
