--- a/docs/40_topics/40_format_standards.mdx
+++ b/docs/40_topics/40_format_standards.mdx
@@ -37,7 +37,7 @@ Single datasets may be bundled to be stored as one unit, or large datasets may b
 
 ## Format standards in chemistry
 
-Many  formats of used in chemistry use one are based on one of the generic formats from the last section. The following table lists some common formats used by chemists.
+Many  formats used in chemistry are based on one of the generic formats from the last section. The following table lists some common formats used by chemists.
 
 
 | Format              | Data type         | Maintainer            | Parent Format | Specification    |
