--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -136,3 +136,4 @@ Where required, format converters should be linked in the dataset’s metadata.
 - [FORCE 11: FAIR Data Principles](https://www.force11.org/group/fairgroup/fairprinciples)
 - [Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
 - [TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
+- [FAIRSFAIR: How to be FAIR with your data. A teaching and training handbook for higher education institutions](https://zenodo.org/record/5787046#.Yd_Emv7MKUn)
