--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -42,7 +42,7 @@ The creation of a DMP can be supported by various tools. Some of the most common
 
 [DMPTool](https://dmptool.org/) is run by the California Digital Library. Due to the different funding landscape in the US, the tool is only of limited use for German/European projects. One advantage is that DMPTool provides DMP examples on the website. It can be used without using the tool.
 
-[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) is run at 45 research institutions in Germany and abroad. It was developed in a DFG-funded project (2015–2020) and is now further maintained by the RDMO working group as an open source software. It makes it easier for researchers to complete DMP templates using precisely formulated questions, help texts, multiple-choice answers. Several templates ("catalogs") exist for specific funding programs, disciplines, or research consortia. They can be downloaded from the central repository. On the other hand, it is quite easy to create a new template for specific needs and submit it.
+[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) is run at 45 research institutions in Germany and abroad (as of January 2022). It was developed in a DFG-funded project (2015–2020) and is now further maintained by the RDMO working group as an open source software. It offers several "question catalogs" for specific funding programs, disciplines, or research consortia. They enable researchers to organise their data management with the help of precisely formulated questions, help texts, multiple-choice answers. User-created catalogs may be reused are available for download in a central repository.
 
 To further support researchers in answering the questions, working groups have been formed, e.g. in Science Europe or the Research Data Alliance (RDA). The Science Europe Group is focusing on improving the general help texts, while the working group in the RDA focuses on [discipline-specific guidance](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe set up a new version of the [practical guide](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) in January 2021. 
 
