chore: removed unnecessary formatting

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -3,14 +3,11 @@ title: "Data Availability Statement"
 ---
 # Data Availability Statement
 
-<img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" vspace="20"/>
-<i>This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.</i>
-
 ## Introduction
 
 The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
 
-The data availability statement enables **[linking of the manuscript](/docs/data/data_publication)** to the corresponding FAIR dataset in research data **[repositories](/docs/topics/repositories)** via  **[DOIs](/docs/topics/pid)**, alternatively using the repository-specific identifiers or accession numbers.  
+The data availability statement enables [linking of the manuscript](/docs/data/data_publication[) to the corresponding FAIR dataset in research data [repositories](/docs/topics/repositories[) via  [DOIs](/docs/topics/pid[), alternatively using the repository-specific identifiers or accession numbers.  
 
 ## Templates for Data Availability Statements
 
@@ -42,3 +39,7 @@ Data sharing is not applicable, as no new data was generated or analysed in this
 
 - [Data Sharing in PLOS One: An analysis of Data Availability Statements](https://doi.org/10.1371/journal.pone.0194768)
 - [The Impact on Authors and Editors of Introducing Data Availability Statements at Nature Journals](https://doi.org/10.2218/ijdc.v13i1.614)
+
+<img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" />
+
+*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
