--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -27,7 +27,7 @@ A repository is constituted by repository software and a database. Data provider
 
 In order to allow data re-use by third parties, [metadata](/docs/topics/metadata) are required beside the actual data. They describe the content of the research data and provide information about its creation, the software or methods used and legal aspects. Metadata can be either added manually or provided through other applications. The metadata should also include terms of use in the form of licences that regulate access to the data (registration, embargo, etc.).
 
-Usually repositories offer a search function with which users can find, view and download data. In order to ensure that data are permanently referenced and cited, repositories assign unique **[persistent identifiers](/docs/topics/pid)** (PIDs). 
+Usually repositories offer a search function with which users can find, view and download data. In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers](/docs/topics/pid[) (PIDs). 
 
 ## Finding the right repository
 
@@ -39,7 +39,7 @@ Nowadays more and more peer review journals mandate authors to deposit their dat
 
 ## Repositories for Chemistry
 
-In the field of synthetic and analytical chemistry, the repository [Chemotion](https://www.chemotion-repository.net/welcome) was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source **[Electronic Laboratory Notebook](/docs/topics/eln)** (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
+In the field of synthetic and analytical chemistry, the repository [Chemotion](https://www.chemotion-repository.net/welcome) was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source [Electronic Laboratory Notebook](/docs/topics/eln[) (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
 
 - comprehensive functionality for the collection, preparation and reuse of data using discipline specific methods and data processing tools
 - existence of automated procedures to ease data curation
