--- a/docs/40_topics/110_data_life_cycle.mdx
+++ b/docs/40_topics/110_data_life_cycle.mdx
@@ -19,7 +19,7 @@ To ensure compliance, professional handling of research data is of particular im
 ## Phase 1: Experiment Design
 
 In phase 1, you start with the **planning of your experiment design** as well as your **data management** ([formats](40_format_standards.mdx), [storage](../30_data/50_data_storage.mdx) …). During this planning phase, already **existing data** should be located and the **legal framework** for use should be checked.
-You should be aware of the various **requirements** of the research funder, your university, your institution, and your community and should write a **first draft** of your **[data management plan (DMP)](../30_data/10_dmp.mdx)**. In this first draft, you should define the **responsibilities**.
+You should be aware of the various **requirements** of the research funder, your university, your institution, and your community and should write a **first draft** of your [data management plan (DMP)](../30_data/10_dmp.mdx). In this first draft, you should define the **responsibilities**.
 
 ## Phase 2: Experiment/ Data Collection
 
