--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -7,7 +7,7 @@ title: "Data Availability Statement"
 
 The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
 
-The data availability statement enables [linking of the manuscript](/docs/data/data_publication[) to the corresponding FAIR dataset in research data [repositories](/docs/topics/repositories[) via  [DOIs](/docs/topics/pid[), alternatively using the repository-specific identifiers or accession numbers.  
+The data availability statement enables [linking of the manuscript](/docs/data/data_publication) to the corresponding FAIR dataset in research data [repositories](/docs/topics/repositories) via  [DOIs](/docs/topics/pid), alternatively using the repository-specific identifiers or accession numbers.  
 
 ## Templates for Data Availability Statements
 
