--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -91,7 +91,7 @@ Additionally, this table may also include further columns for:
 
 Templates for this table are provided as [.ods](pathname://../../../assets/mrst_template.ods), [.xlsx](pathname://../../../assets/mrst_template.xlsx), and [.csv](pathname://../../../assets/mrst_template.csv) files. These template files also take advantage of [ontologies](/docs/topics/ontology) to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in [PubChem](https://pubchem.ncbi.nlm.nih.gov/) by searching via SMILES, InChI or InChIKey.
 
-If the experimental work is documented in an [ELN](/docs/topics/eln[), this table includes all the compiled information by the ELN system. Chemotion ELN generates [SMILES](/docs/topics/smiles), [InChI](/docs/topics/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions.
+If the experimental work is documented in an [ELN](/docs/topics/eln), this table includes all the compiled information by the ELN system. Chemotion ELN generates [SMILES](/docs/topics/smiles), [InChI](/docs/topics/inchi), InChIKey as well as RInChI and RInChIKey for compounds and reactions.
 
 <img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" />
 
