--- a/docs/40_topics/75_ct_files.mdx
+++ b/docs/40_topics/75_ct_files.mdx
@@ -23,7 +23,7 @@ All CTfiles do not make use of controlled vocabularies or [ontologies](/docs/top
 
 There are two variants of these formats in use. Due to limitations in the V2000 format, the extended V3000 format was released. This V3000 format also includes a collection block, template block, extended connection table (extended CTAB) and enhanced features on stereochemistry. The V2000 format is limited in the size of molecules by supporting up to 999 atoms, thus, it is not applicable to large molecules. Moreover, the V2000 format does not support R-groups. However, the V3000 variant is currently not supported by all tools and applications. The V2000 format should be used to maximise interoperability, especially for chemistry dealing with small molecules.
 
-CTfiles were created by MDL Information Systems, later acquired by Symyx Technologies, merged with Accelrys Corp and renamed to BIOVIA, which is now part of the Dassault Group. These formats can be used [without any restrictions by licences](https://www.mll-news.com/eugh-zum-urheberrechtlichen-schutz-von-software/) following European Union directive [2009/24/EC](http://data.europa.eu/eli/dir/2009/24/oj[) and the EuGH judgement [C-406/10](https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:62010CJ0406:EN:HTML[).
+CTfiles were created by MDL Information Systems, later acquired by Symyx Technologies, merged with Accelrys Corp and renamed to BIOVIA, which is now part of the Dassault Group. These formats can be used [without any restrictions by licences](https://www.mll-news.com/eugh-zum-urheberrechtlichen-schutz-von-software/) following European Union directive [2009/24/EC](http://data.europa.eu/eli/dir/2009/24/oj) and the EuGH judgement [C-406/10](https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:62010CJ0406:EN:HTML).
 
 ## Sources and further information
 
