--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -55,11 +55,10 @@ A comparison of commonly used DMP tools can be found in the [DMP-Toolguide](http
 - [Practical Guide to the International Alignment of Research Data Management - Extended Edition](https://doi.org/10.5281/zenodo.4915862)
 - [RDA workgroup on discipline specific guidance on DMPs](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg)
 - [Horizon Europe DMP Template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx)
-- [Indications from the Federal Ministery of Education](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung) _(German)_
-- [Data Management Plans at forschungsdaten.info](https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/) _(German)_
-- [Comparison of DMP tools at forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Management_Pl%C3%A4ne#Tools) _(German)_
+- German: [Indications from the Federal Ministery of Education](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung)
+- German: [Data Management Plans at forschungsdaten.info](https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/) 
+- German: [Comparison of DMP tools at forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Management_Pl%C3%A4ne#Tools) 
 - [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)
-
 - [DMPOnline](https://dmponline.dcc.ac.uk/)
 - [DMPTool](https://dmptool.org/)
 - [RDMO](https://rdmo.aip.de/)
