chore: work on text

--- a/docs/20_role/40_core_facility_manager.mdx
+++ b/docs/20_role/40_core_facility_manager.mdx
@@ -12,4 +12,18 @@ This article applies to core facility managers and heads of analytical service u
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/N4C_DataLifecycle.svg')} width="500" align="right" />
 
-In the chemistry data lifecycle, core facilities play an important role as major producers of chemical data.
+In the chemistry data lifecycle, core facilities play an important role as major producers of chemical data. For modern analytical techniques like mass spectrometry or NMR spectroscopy, data are usually recorded digitally and the challenges lie less in digitalisation but management issues.
+
+This article reflects some of the most important areas to consider for a core facilities data storage infrastructure and gives perspectives on where [FAIR guiding principles](/docs/topics/fair/) may already be followed today.
+
+## Good Research Practice
+
+When thinking about how to store data and make them available, an important starting point are Good Research Practice (GRP) considerations. As funding agencies adhere to GRP guidelines and a breach of such guidelines will effectively preclude any future research funding.
+
+### The Situation in Germany
+
+The German Research Council ([DFG](https://www.dfg.de)) summarizes the consensus on the *fundamental principles and standards of good practice* in science in their Code fo Conduct *Guidelines for Safeguarding Good Research Practice* [\[1\]](#dfg_code). In guideline 17, a storage of all research data for the period of ten years is demanded, starting from the date of publication. Data storage strategies should therefore cons
+
+## Sources
+
+1. <a name="dfg_code"></a> Deutsche Forschungsgemeinschaft (DFG), <em>Guidelines for Safeguarding Good Research Practice. Code of Conduct</em>, September 2019, <a href="https://doi.org/10.5281/zenodo.3923602"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg" alt="DOI" /></a>
