--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -69,7 +69,7 @@ These pages contain general information on concrete RDM topics and concepts expl
 
 The section on Lead by Example presents representative as well as substantially complex real datasets from various subdisciplines of chemistry in a standard-compliant manner. Take a look at the list for inspiration as to what is already possible today!
 
-Additinally, this list documents the process of evolving FAIRness of chemistry research data, surfaces practical issues and suggestions for improvements to be fed back to other projects within NFDI4Chem.
+Additionally, this list documents the process of evolving FAIRness of chemistry research data, surfaces practical issues and gives suggestions for improvements to be fed back to other projects within NFDI4Chem.
 
 <LeadButton />
 
