updated tables of mrcs article with ontologies, further minor typo fixes

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -43,3 +43,6 @@ Data sharing is not applicable, as no new data was generated or analysed in this
 <img align="right" src='https://licensebuttons.net/l/zero/1.0/88x31.png' alt="CC0 badge" />
 
 *This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
+
+----
+Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
